# NovaHunter

./: .gitignore  PROJECT_BRIEF.md  PROJECT_OVERVIEW.md  README.md  changelogs.md  pyproject.toml  strix.spec
.github/workflows/: ci.yml  cli-binaries.yml  mirror-strix-sandbox.yml  release.yml  sandbox-image.yml
containers/: Dockerfile  docker-entrypoint.sh  supervisord.conf  tools-registry.yaml
deploy/: .env.example  Caddyfile  README.md  docker-compose.yml
docs/: INSTALL_UBUNTU.md  PARITY.md
docs/advanced/: configuration.mdx
docs/features/: parity-gaps-closure.mdx
docs/integrations/: ci-cd.mdx  github-actions.mdx  mcp.mdx  outbound.mdx
docs/operations/: retention.mdx
docs/report-templates/: README.md  executive-summary.md  finding.md
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/(app)/admin/: page.tsx
frontend/src/app/(app)/analytics/: page.tsx
frontend/src/app/(app)/dashboard/: page.tsx
frontend/src/app/(app)/findings/: page.tsx
frontend/src/app/(app)/health/: page.tsx
frontend/src/app/(app)/notifications/: page.tsx
frontend/src/app/(app)/profile/: page.tsx  profile-client.tsx
frontend/src/app/(app)/reports/: page.tsx
frontend/src/app/(app)/runs/: page.tsx
frontend/src/app/(app)/settings/: page.tsx
frontend/src/app/(auth)/sign-in/: demo-form.tsx
frontend/src/app/(auth)/sign-up/: demo-form.tsx
frontend/src/app/docs/: authorize-dialog.tsx  docs-auth.ts  endpoints.ts  layout.tsx  page.tsx  try-it.tsx
frontend/src/components/charts/: area-chart.tsx  bar-chart.tsx  severity-donut.tsx
frontend/src/components/common/: command-palette.tsx  demo-banner.tsx  logo.tsx  notifications-menu.tsx  page-state.tsx  severity-badge.tsx  status-badge.tsx
frontend/src/components/landing/: agent-tree.tsx  attack-terminal.tsx  copy-command.tsx  findings-stream.tsx  reveal.tsx
frontend/src/components/layout/: shell.tsx  sidebar.tsx  topbar.tsx
frontend/src/components/providers/: clerk-provider.tsx  providers.tsx
frontend/src/components/reports/: export-format-menu.tsx
frontend/src/components/runs/: agent-tree.tsx  blackboard-panel.tsx  chat-panel.tsx  command-palette.tsx  findings-panel.tsx  llm-cost-card.tsx  run-live-view.tsx  shell-tabs.tsx  timeline.tsx  tool-stream.tsx
frontend/src/components/ui/: avatar.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  progress.tsx  select.tsx  skeleton.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
frontend/src/lib/: config.ts  notifications-live.ts  notifications.ts  totp.ts  types.ts  utils.ts
frontend/src/lib/api/: api-provider.ts  auth-token.ts  demo-provider.ts  index.ts  provider-context.ts  provider.ts  use-provider-data.ts
frontend/src/lib/demo/: seed.ts
scripts/: install.sh  setup.sh  smoke_llm_router.py  smoke_policy_guard.py  smoke_report_renderers.py  smoke_report_schema.py  smoke_view_image.py  web-install.sh
strix/agents/: base_agent.py
strix/agents/StrixAgent/: strix_agent.py
strix/api/: Dockerfile  __init__.py  __main__.py  app.py  requirements.txt  schemas.py  settings.py
strix/api/docs/: ARCHITECTURE.md
strix/api/middleware/: __init__.py  metrics.py
strix/api/routes/: admin.py  auth.py  blackboard.py  burp.py  dashboard.py  findings.py  health.py  integrations.py  llm.py  mcp.py  orgs.py  run_sidechannel_proxy.py  runs.py  schedules.py  shells.py  sidechannels.py  system.py  vpn.py
strix/api/services/: audit.py  auth.py  checkpoint.py  checkpoints.py  db.py  events.py  integrations.py  llm_config.py  llm_routes.py  mcp_registry.py  policy.py  preflight.py  rate_limit.py  report_artifacts.py  report_renderers.py  report_schema.py  retention.py  run_launcher.py  run_store.py  sandbox_janitor.py  schedules.py  secrets.py  sidechannel_tokens.py  system_health.py  vnc_upstream.py
strix/capabilities/: registry.yaml
strix/config/: config.py
strix/core/: __init__.py  pipeline_contracts.py
strix/core/validation/: __init__.py  exploit_queue_schema.py
strix/interface/: cli.py  main.py  tui.py  utils.py
strix/interface/tool_components/: agent_message_renderer.py  proxy_renderer.py  reporting_renderer.py
strix/llm/: config.py  dedupe.py  llm.py  memory_compressor.py  router.py
strix/llm/providers/: __init__.py
strix/mcp/: __init__.py  server.py
strix/nova/: blackboard.py
strix/runtime/: __init__.py  docker_runtime.py  runtime.py  tool_server.py
strix/skills/scan_modes/: deep.md
strix/telemetry/: posthog.py  tracer.py  utils.py
strix/tools/: __init__.py  executor.py
strix/tools/agents_graph/: agents_graph_actions.py
strix/tools/browser/: browser_instance.py  session_registry.py  tab_manager.py
strix/tools/burp/: __init__.py  burp_actions.py  burp_actions_schema.xml
strix/tools/capabilities/: __init__.py  install_capability_actions.py
strix/tools/engagement/: __init__.py  engagement_state_actions.py
strix/tools/file_edit/: file_edit_actions.py
strix/tools/finish/: finish_actions_schema.xml
strix/tools/load_skill/: load_skill_actions.py
strix/tools/netcat/: __init__.py  netcat_actions.py  netcat_actions_schema.xml
strix/tools/notes/: notes_actions.py
strix/tools/proxy/: proxy_manager.py
strix/tools/python/: python_instance.py
strix/tools/reporting/: reporting_actions.py  reporting_actions_schema.xml
strix/tools/shells/: __init__.py  shells_actions.py  shells_actions_schema.xml
strix/tools/terminal/: terminal_manager.py  terminal_session.py
strix/tools/vision/: __init__.py  view_image_actions.py  view_image_actions_schema.xml
strix/tools/web_search/: web_search_actions.py
tests/: test_policy_dangerous_commands.py
tests/api/: conftest.py  test_admin_rbac.py  test_burp_routes.py  test_health.py  test_mcp_routes.py  test_runs.py  test_sandbox_janitor.py  test_vnc_proxy_errors.py
tests/tools/: test_capabilities_tool.py
(+13 files in other folders)
