[project]
name = "strix-agent"
version = "0.8.3"
description = "Open-source AI Hackers for your apps"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
  { name = "Strix", email = "hi@usestrix.com" },
]
keywords = [
  "cybersecurity",
  "security",
  "vulnerability",
  "scanner",
  "pentest",
  "agent",
  "ai",
  "cli",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Topic :: Security",
  "License :: OSI Approved :: Apache Software License",
  "Environment :: Console",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "litellm[proxy]>=1.81.1,<1.82.0",
  "tenacity>=9.0.0",
  "pydantic[email]>=2.11.3",
  "rich",
  "docker>=7.1.0",
  "textual>=6.0.0",
  "xmltodict>=0.13.0",
  "requests>=2.32.0",
  "cvss>=3.2",
  "traceloop-sdk>=0.53.0",
  "opentelemetry-exporter-otlp-proto-http>=1.40.0",
  "scrubadub>=2.0.1",
  "defusedxml>=0.7.1",
  "cryptography>=42.0.0",
]

[project.scripts]
strix = "strix.interface.main:main"

[project.optional-dependencies]
vertex = ["google-cloud-aiplatform>=1.38"]
sandbox = [
  "fastapi",
  "uvicorn",
  "ipython>=9.3.0",
  "openhands-aci>=0.3.0",
  "playwright>=1.48.0",
  "gql[requests]>=3.5.3",
  "pyte>=0.8.1",
  "libtmux>=0.46.2",
  "numpydoc>=1.8.0",
]
dev = [
  "mypy>=1.16.0",
  "ruff>=0.11.13",
  "pyright>=1.1.401",
  "pylint>=3.3.7",
  "bandit>=1.8.3",
  "pytest>=8.4.0",
  "pytest-asyncio>=1.0.0",
  "pytest-cov>=6.1.1",
  "pytest-mock>=3.14.1",
  "pre-commit>=4.2.0",
  "black>=25.1.0",
  "isort>=6.0.1",
  "pyinstaller>=6.17.0; python_version >= '3.12' and python_version < '3.15'",
]

[dependency-groups]
dev = [
  "mypy>=1.16.0",
  "ruff>=0.11.13",
  "pyright>=1.1.401",
  "pylint>=3.3.7",
  "bandit>=1.8.3",
  "pytest>=8.4.0",
  "pytest-asyncio>=1.0.0",
  "pytest-cov>=6.1.1",
  "pytest-mock>=3.14.1",
  "pre-commit>=4.2.0",
  "black>=25.1.0",
  "isort>=6.0.1",
  "pyinstaller>=6.17.0; python_version >= '3.12' and python_version < '3.15'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["strix"]

# ============================================================================
# Type Checking Configuration
# ============================================================================

[tool.mypy]
python_version = "3.12"
strict = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true
pretty = true
# We still want strict typing on our code, but we do not require third-party
# stub packages in CI (types-requests/types-PyYAML/types-docker, etc).
disable_error_code = ["import-untyped"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["strix.telemetry.*"]
disallow_untyped_calls = false

# Allow some flexibility for third-party libraries
[[tool.mypy.overrides]]
module = [
    "litellm.*",
    "tenacity.*",
    "numpydoc.*",
    "rich.*",
    "IPython.*",
    "openhands_aci.*",
    "playwright.*",
    "uvicorn.*",
    "jinja2.*",
    "pydantic_settings.*",
    "jwt.*",
    "httpx.*",
    "requests.*",
    "gql.*",
    "textual.*",
    "pyte.*",
    "libtmux.*",
    "pytest.*",
    "cvss.*",
    "opentelemetry.*",
    "scrubadub.*",
    "traceloop.*",
    "yaml.*",
    "defusedxml.*",
    "docker.*",
    "fastapi.*",
    "sse_starlette.*",
    "cryptography.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["strix.api.routes.*"]
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["strix.api.app"]
disallow_untyped_decorators = false

# Relax strict rules for test files (pytest decorators are not fully typed)
[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_decorators = false
disallow_untyped_defs = false

# ============================================================================
# Ruff Configuration (Fast Python Linter & Formatter)
# ============================================================================

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "__pycache__",
    "build",
    "dist",
    "migrations",
]

[tool.ruff.lint]
# Enable comprehensive rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "YTT", # flake8-2020
    "S",   # flake8-bandit
    "BLE", # flake8-blind-except
    "FBT", # flake8-boolean-trap
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "COM", # flake8-commas
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "EM",  # flake8-errmsg
    "FA",  # flake8-future-annotations
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "G",   # flake8-logging-format
    "INP", # flake8-no-pep420
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PYI", # flake8-pyi
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SLF", # flake8-self
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "TCH", # flake8-type-checking
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PD",  # pandas-vet
    "PGH", # pygrep-hooks
    "PL",  # Pylint
    "TRY", # tryceratops
    "FLY", # flynt
    "PERF", # Perflint
    "RUF", # Ruff-specific rules
]

ignore = [
    "S101",   # Use of assert
    "S104",   # Possible binding to all interfaces
    "S301",   # Use of pickle
    "COM812", # Missing trailing comma (handled by formatter)
    "ISC001", # Single line implicit string concatenation (handled by formatter)
    "PLR0913", # Too many arguments to function call
    "TRY003",  # Avoid specifying long messages outside the exception class
    "EM101",   # Exception must not use a string literal
    "EM102",   # Exception must not use an f-string literal
    "FBT001",  # Boolean positional arg in function definition
    "FBT002",  # Boolean default positional argument in function definition
    "G004",    # Logging statement uses f-string
    "PLR2004", # Magic value used in comparison
    "SLF001",  # Private member accessed
    "PLC0415", # Import should be top-level (lazy imports used for optional deps / cycle breaks)
    "B008",    # Function call in default arg (used for stable default tool args in several modules)
    "E501",    # Line length (handled pragmatically; enforced by formatter where possible)
    "BLE001",  # Blind except (legacy patterns; handled case-by-case)
    "TC001",   # typing-only first-party import
    "TC002",   # typing-only third-party import
    "TC003",   # typing-only stdlib import
    "S110",    # try/except/pass (common in best-effort cleanup paths)
    "S112",    # try/except/continue
    "PERF401", # manual list comprehension
    "PERF403", # manual dict comprehension
    "PGH003",  # blanket type ignore
    "PLW0603", # global statement
    "PLW2901", # redefined loop name
    "PLR0911", # too many return statements
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "SIM105",  # suppressible exception
    "RUF006",  # asyncio create_task without reference (fire-and-forget patterns used)
    "TRY300",  # try/else suggestion (style preference)
    "FBT003",  # boolean positional value in call
    "N815",    # mixedCase in class scope (API schema fields)
    "A002",    # builtin shadowing (tool parameter names)
    "DTZ003",  # datetime.utcnow usage
    "PT028",   # default args in FastAPI route params (false-positive for pytest rules)
    "PT019",   # pytest fixture rule (can false-positive on Depends params)
    "PTH105",  # os.replace -> Path.replace
    "PTH110",  # os.path.exists -> Path.exists
    "PTH112",  # os.path.isdir -> Path.is_dir
    "PTH123",  # open -> Path.open
    "SIM102",  # collapsible ifs
    "SIM103",  # inline condition
    "SIM115",  # open file with context manager (NamedTemporaryFile patterns)
    "T201",    # print (used by stdio MCP server)
    "B904",    # raise from in except
    "F841",    # assigned but unused
    "FLY002",  # static join to f-string
    "INP001",  # implicit namespace package
    "RUF003",  # ambiguous unicode character comment
    "RUF046",  # unnecessary int cast
    "RUF059",  # unused unpacked variable
    "ARG002",  # unused method argument
    "PIE810",  # multiple starts/ends with
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S106",   # Possible hardcoded password
    "S108",   # Possible insecure usage of temporary file/directory
    "ARG001", # Unused function argument
    "PLR2004", # Magic value used in comparison
]
"strix/tools/**/*.py" = [
    "ARG001", # Unused function argument (tools may have unused args for interface consistency)
]

[tool.ruff.lint.isort]
force-single-line = false
lines-after-imports = 2
known-first-party = ["strix"]
known-third-party = ["fastapi", "pydantic"]

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ============================================================================
# PyRight Configuration (Alternative type checker)
# ============================================================================

[tool.pyright]
include = ["strix"]
exclude = ["**/__pycache__", "build", "dist"]
pythonVersion = "3.12"
pythonPlatform = "Linux"

typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
reportGeneralTypeIssues = true
reportPropertyTypeMismatch = true
reportFunctionMemberAccess = true
reportMissingParameterType = true
reportMissingTypeArgument = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportInconsistentConstructor = true
reportOverlappingOverload = true
reportConstantRedefinition = true
reportImportCycles = true
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportDuplicateImport = true

# ============================================================================
# Black Configuration (Code Formatter)
# ============================================================================

[tool.black]
line-length = 100
target-version = ['py312']
include = '\\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# ============================================================================
# isort Configuration (Import Sorting)
# ============================================================================

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["strix"]
known_third_party = ["fastapi", "pydantic", "litellm", "tenacity"]

# ============================================================================
# Pytest Configuration
# ============================================================================

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=strix",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["strix"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# ============================================================================
# Bandit Configuration (Security Linting)
# ============================================================================

[tool.bandit]
exclude_dirs = ["tests", "docs", "build", "dist"]
skips = ["B101", "B601", "B404", "B603", "B607"]  # Skip assert, shell injection, subprocess import and partial path checks
severity = "medium"
